force-app/main/default/objects/HAM_Event_Form__c/HAM_Event_Form__c.object-meta.xml
<CustomObject>
    <label>Event Form</label>
    <nameField>
        <label>Event Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>