force-app/main/default/objects/HAM_Event_Form__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links this form to its parent Cvent event record.</description>
    <inlineHelpText>The Cvent event this form belongs to.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>Event Forms</relationshipLabel>
    <relationshipName>Event_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>