force-app/main/default/objects/HAM_Event_Form__c/fields/HAM_BT_Form__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the originating Blackthorn form record. Provides a navigable back-link for validation and cross-reference.</description>
    <inlineHelpText>Click to navigate to the original Blackthorn form record. Null indicates this record was not migrated from Blackthorn.</inlineHelpText>
    <label>BT Form</label>
    <referenceTo>conference360__Form__c</referenceTo>
    <relationshipLabel>Event Forms</relationshipLabel>
    <relationshipName>Event_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>