force-app/main/default/objects/HAM_Event_Form__c/fields/HAM_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Form_Name__c</fullName>
    <description>The name of this form carried over from Blackthorn.</description>
    <inlineHelpText>The form name as it appeared in Blackthorn.</inlineHelpText>
    <label>Form Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>