force-app/main/default/objects/HAM_Event_Form__c/fields/HAM_Form_Type__c.field-meta.xml
<CustomField>
    <fullName>HAM_Form_Type__c</fullName>
    <description>The type of form carried over from Blackthorn.</description>
    <inlineHelpText>Whether this form was shown before registration, after, or as a survey.</inlineHelpText>
    <label>Form Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-registration</fullName>
            </value>
            <value>
                <fullName>Post-registration</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>