force-app/main/default/objects/HAM_Event_Form__c/fields/HAM_Submitted_Message__c.field-meta.xml
<CustomField>
    <fullName>HAM_Submitted_Message__c</fullName>
    <description>The confirmation message shown to attendees after submitting this form, carried over from Blackthorn.</description>
    <inlineHelpText>Message displayed to the attendee after form submission.</inlineHelpText>
    <label>Submitted Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>